# zk_index

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  diesel.toml  file_change_watcher.py  flake.nix  index.py  main.py  test.ipynb  test.py
.githooks/: pre-commit
.github/workflows/: makefile.yml
docs/assets/: sql_schema.d2
index_extensions/: index_links.py  index_notes.py  index_properties.py  index_tasks.py
proptest-regressions/: watcher.txt
src/: indexer.rs  link_index.rs  main.rs  markdown_index.rs  note.rs  watcher.rs  wikilink_parser.rs
src/sqlite/: embedding_index.rs  mod.rs  models.rs  note_index.rs  schema.rs
